src/objects/Participant_Agenda_MERC__c.object
<CustomObject>
    <description>Junction object between Meeting Participant and Agenda. Created by John A Adams 10/3/2013</description>
    <fields>
        <fullName>Assigned_Topic_MERC__c</fullName>
        <description>Track topic assigned to speaker. Created 10/08/2013 by KLorenti.</description>
        <label>Assigned Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Day_MERC__c</fullName>
        <description>Meeting Day</description>
        <formula>Session_MERC__r.Start_Time_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_MERC__c</fullName>
        <description>Associates Meeting Participant with Session trough junction object
Created by John A Adams 10/3/2013</description>
        <label>Meeting Participant</label>
        <referenceTo>Meeting_Participant_MERC__c</referenceTo>
        <relationshipLabel>Participant Agendas</relationshipLabel>
        <relationshipName>Participant_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Session_MERC__c</fullName>
        <description>One to Many relationship between Participant Session and Session
Created by John A Adams 10/3/2013</description>
        <label>Session</label>
        <referenceTo>Agenda_Item_MERC__c</referenceTo>
        <relationshipLabel>Participant Agendas</relationshipLabel>
        <relationshipName>Participant_Sessions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speaker_Topic_Title_MERC__c</fullName>
        <description>Track Speaker Topic where speaker may choose title of the session. Created 10/08/2013 by KLorenti.</description>
        <label>Speaker Topic Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Participant Agenda</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Participant Agenda #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Agendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>